# automated-trading-system

./: .env.example  .gitignore  README.md  config.live.mainnet.smoke.yaml  config.live.smoke.yaml  config.minimal.yaml  config.yaml  docker-compose.yml  pyproject.toml
artifacts/: xrp_backtest_tuning_report.json  xrp_engine_v2_tuned_params.yaml  xrp_engine_v2_tuning_report.json  xrp_tuned_engine_params.yaml  xrp_tuned_engine_params_selected.yaml  xrp_tuning_runs_summary.json
docker/: api.Dockerfile  ingestion.Dockerfile  trader.Dockerfile  web.Dockerfile
docs/: digitalocean_deploy_checklist.md
scripts/: README.md  backfill_vps_recent_candles.ps1  check_vps_ingestion_status.ps1  check_vps_ingestion_ws_debug.ps1  check_vps_trader_status.ps1  check_vps_web_popup.ps1  check_vps_xrp_bar_quality.ps1  compose_down.sh  compose_logs.sh  compose_up.sh  deploy_vps_engine_iteration_hotfix.ps1  deploy_vps_hotfix.ps1  deploy_vps_ingestion_ws_hotfix.ps1  deploy_vps_web_hotfix.ps1  flatten_project_root.ps1  live_ops_smoke.py  maint_flatten_project_root.ps1  real_roundtrip_smoke.py  real_short_smoke.py  report_vps_xrp_engine_replay.ps1  report_vps_xrp_engine_scenarios.ps1  run_api.sh  run_api_local.sh  run_ingestion_local.sh  run_trader_local.sh  run_web_local.sh  run_worker.sh  seed_mock_data.py  smoke_test_compose.ps1  smoke_test_compose.sh  start_dev_stack.ps1  stop_dev_stack.ps1  sync_vps_exchange_env.ps1  tune_xrp_backtest.py  tune_xrp_engine_v2.py
src/: mdtas_worker.py
tests/: test_bollinger.py  test_coinbase_ws_provider.py  test_compose_contract.py  test_gap_aware_stops.py  (+16 more)
(+89 files in other folders)
